--- a/date-a-scientist.ipynb
+++ b/date-a-scientist.ipynb
@@ -2,25 +2,84 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pandas'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m\n\u001b[32m      3\u001b[39m data = pd.read_csv(\u001b[33m'\u001b[39m\u001b[33mprofiles.csv\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      5\u001b[39m \u001b[38;5;66;03m#EDA\u001b[39;00m\n\u001b[32m      6\u001b[39m \n\u001b[32m      7\u001b[39m \u001b[38;5;66;03m#print(data.head())\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m     14\u001b[39m \n\u001b[32m     15\u001b[39m \u001b[38;5;66;03m#fill null essays with empty string\u001b[39;00m\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'pandas'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['body_type', 'diet', 'drinks', 'drugs', 'education', 'essay0', 'essay1',\n",
+      "       'essay2', 'essay3', 'essay4', 'essay5', 'essay6', 'essay7', 'essay8',\n",
+      "       'essay9', 'ethnicity', 'job', 'last_online', 'location', 'offspring',\n",
+      "       'orientation', 'pets', 'religion', 'sex', 'sign', 'smokes', 'speaks',\n",
+      "       'status'],\n",
+      "      dtype='object')\n",
+      "   age body_type               diet    drinks      drugs  \\\n",
+      "0   22      plus  strictly anything  moderate      never   \n",
+      "1   35   average       mostly other     heavy  sometimes   \n",
+      "2   38      slim           anything  moderate    unknown   \n",
+      "3   23      slim         vegetarian  moderate    unknown   \n",
+      "4   29       fit            unknown  moderate      never   \n",
+      "\n",
+      "                           education  \\\n",
+      "0      working on college/university   \n",
+      "1              working on space camp   \n",
+      "2     graduated from masters program   \n",
+      "3      working on college/university   \n",
+      "4  graduated from college/university   \n",
+      "\n",
+      "                                              essay0  \\\n",
+      "0  about me:<br />\\n<br />\\ni would love to think...   \n",
+      "1  i am a chef: this is what that means.<br />\\n1...   \n",
+      "2  i'm not ashamed of much, but writing public te...   \n",
+      "3          i work in a library and go to school. . .   \n",
+      "4  hey how's it going? currently vague on the pro...   \n",
+      "\n",
+      "                                              essay1  \\\n",
+      "0  currently working as an international agent fo...   \n",
+      "1  dedicating everyday to being an unbelievable b...   \n",
+      "2  i make nerdy software for musicians, artists, ...   \n",
+      "3          reading things written by old dead people   \n",
+      "4                         work work work work + play   \n",
+      "\n",
+      "                                              essay2  \\\n",
+      "0  making people laugh.<br />\\nranting about a go...   \n",
+      "1  being silly. having ridiculous amonts of fun w...   \n",
+      "2  improvising in different contexts. alternating...   \n",
+      "3  playing synthesizers and organizing books acco...   \n",
+      "4  creating imagery to look at:<br />\\nhttp://bag...   \n",
+      "\n",
+      "                                              essay3  ... diet_strictness  \\\n",
+      "0  the way i look. i am a six foot half asian, ha...  ...          strict   \n",
+      "1                                                     ...        flexible   \n",
+      "2  my large jaw and large glasses are the physica...  ...        standard   \n",
+      "3                  socially awkward but i do my best  ...        standard   \n",
+      "4            i smile a lot and my inquisitive nature  ...         unknown   \n",
+      "\n",
+      "  education_status education_level presence has_kids wants_kids likes_dogs  \\\n",
+      "0      in progress         college   active       no      maybe        yes   \n",
+      "1      in progress         unknown   active       no      maybe        yes   \n",
+      "2         finished         masters   active  unknown    unknown    unknown   \n",
+      "3      in progress         college   active  unknown         no    unknown   \n",
+      "4         finished         college   active  unknown    unknown        yes   \n",
+      "\n",
+      "   has_dogs  likes_cats has_cats  \n",
+      "0   unknown         yes  unknown  \n",
+      "1   unknown         yes  unknown  \n",
+      "2   unknown     unknown      yes  \n",
+      "3   unknown         yes  unknown  \n",
+      "4   unknown         yes  unknown  \n",
+      "\n",
+      "[5 rows x 42 columns]\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
     "data = pd.read_csv('profiles.csv')\n",
     "\n",
@@ -215,34 +274,103 @@
     "#print(data.job.unique())\n",
     "\n",
     "#last_online\n",
-    "print(data.last_online.unique())\n",
+    "#print(data.last_online.unique())\n",
     "\n",
     "data['last_online'] = pd.to_datetime(data['last_online'], format='%Y-%m-%d-%H-%M')\n",
     "most_recent_date = data['last_online'].max()\n",
     "data['last_online'] = (most_recent_date - data['last_online']).dt.days\n",
     "\n",
-    "def convert_lastonline_cat(dt):\n",
-    "    if dt <= 7:\n",
-    "        'active'\n",
-    "    elif dt > 7 and dt <14:\n",
-    "        'semi-active'\n",
+    "def convert_lastonline_to_cat(lo):\n",
+    "    if lo <= 7:\n",
+    "        return 'active'\n",
+    "    elif lo < 14:\n",
+    "        return 'semi-active'\n",
     "    else:\n",
-    "        'inactive'\n",
+    "        return 'not active'\n",
     "\n",
-    "data['activity_status'] = data.last_online.apply(convert_lastonline_cat)\n",
+    "data['presence'] = data['last_online'].apply(convert_lastonline_to_cat)\n",
     "\n",
-    "print(data['activity_status'].head())\n",
-    "        \n",
+    "#location\n",
+    "#print(data.location.unique())\n",
     "\n",
-    "#OPTIONAL - CONVERT TO CATEGORIES (ACTIVE, SEMI ACTIVE, NOT ACTIVE, etc...)\n"
+    "def get_main_location(location):\n",
+    "    return location.split(',')[1].strip()\n",
+    "\n",
+    "data['location'] = data['location'].apply(get_main_location)\n",
+    "\n",
+    "#offspring\n",
+    "#print(data.offspring.unique())\n",
+    "\n",
+    "data['offspring'] = data['offspring'].str.replace(\"doesn&rsquo;t\", \"doesn't\", regex=False)\n",
+    "\n",
+    "has_kids_conditions = [\n",
+    "    data['offspring'].str.contains('has a kid|has kids', case = False),\n",
+    "    data['offspring'].str.contains('doesn\\'t have kids', case = False)\n",
+    "]\n",
+    "\n",
+    "has_kids_choices = ['yes', 'no']\n",
+    "\n",
+    "data['has_kids'] = np.select(has_kids_conditions, has_kids_choices, default = 'unknown')\n",
+    "\n",
+    "wants_kids_conditions = [\n",
+    "    data['offspring'].str.contains('doesn\\'t want', case=False),\n",
+    "    data['offspring'].str.contains('might want', case=False),\n",
+    "    data['offspring'].str.contains('wants', case=False)\n",
+    "]\n",
+    " \n",
+    "wants_kids_choices = ['no', 'maybe', 'yes']\n",
+    "\n",
+    "data['wants_kids'] = np.select(wants_kids_conditions, wants_kids_choices, default='unknown')\n",
+    "\n",
+    "#orientation - already good\n",
+    "#print(data.orientation.unique())\n",
+    "\n",
+    "#pets\n",
+    "#print(data.pets.unique())\n",
+    "\n",
+    "likes_dogs_conditions = [\n",
+    "    data['pets'].str.contains('likes dogs', case = False),\n",
+    "    data['pets'].str.contains('dislikes dogs', case = False)\n",
+    "]\n",
+    "\n",
+    "likes_dogs_choices = ['yes', 'no']\n",
+    "\n",
+    "data['likes_dogs'] = np.select(likes_dogs_conditions, likes_dogs_choices, default = 'unknown')\n",
+    "\n",
+    "has_dogs_conditions = [\n",
+    "    data['pets'].str.contains('has dogs', case = False)\n",
+    "]\n",
+    "\n",
+    "has_dogs_choices = ['yes']\n",
+    "\n",
+    "data['has_dogs'] = np.select(has_dogs_conditions, has_dogs_choices, default = 'unknown')\n",
+    "\n",
+    "likes_cats_conditions = [\n",
+    "    data['pets'].str.contains('likes cats', case = False),\n",
+    "    data['pets'].str.contains('dislikes cats', case = False)\n",
+    "]\n",
+    "\n",
+    "likes_cats_choices = ['yes', 'no']\n",
+    "\n",
+    "data['likes_cats'] = np.select(likes_cats_conditions, likes_cats_choices, default = 'unknown')\n",
+    "\n",
+    "has_cats_conditions = [\n",
+    "    data['pets'].str.contains('has cats', case = False)\n",
+    "]\n",
+    "\n",
+    "has_cats_choices = ['yes']\n",
+    "\n",
+    "data['has_cats'] = np.select(has_cats_conditions, has_cats_choices, default = 'unknown')\n",
+    "\n",
+    "print(data.head())\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -254,7 +382,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
