--- a/date-a-scientist.ipynb
+++ b/date-a-scientist.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 48,
    "metadata": {
     "scrolled": true
    },
@@ -11,69 +11,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['body_type', 'diet', 'drinks', 'drugs', 'education', 'essay0', 'essay1',\n",
-      "       'essay2', 'essay3', 'essay4', 'essay5', 'essay6', 'essay7', 'essay8',\n",
-      "       'essay9', 'ethnicity', 'job', 'last_online', 'location', 'offspring',\n",
-      "       'orientation', 'pets', 'religion', 'sex', 'sign', 'smokes', 'speaks',\n",
-      "       'status'],\n",
+      "Index(['age', 'body_type', 'diet', 'drinks', 'drugs', 'education', 'essay0',\n",
+      "       'essay1', 'essay2', 'essay3', 'essay4', 'essay5', 'essay6', 'essay7',\n",
+      "       'essay8', 'essay9', 'ethnicity', 'height', 'income', 'job',\n",
+      "       'last_online', 'location', 'offspring', 'orientation', 'pets',\n",
+      "       'religion', 'sex', 'sign', 'smokes', 'speaks', 'status'],\n",
       "      dtype='object')\n",
-      "   age body_type               diet    drinks      drugs  \\\n",
-      "0   22      plus  strictly anything  moderate      never   \n",
-      "1   35   average       mostly other     heavy  sometimes   \n",
-      "2   38      slim           anything  moderate    unknown   \n",
-      "3   23      slim         vegetarian  moderate    unknown   \n",
-      "4   29       fit            unknown  moderate      never   \n",
-      "\n",
-      "                           education  \\\n",
-      "0      working on college/university   \n",
-      "1              working on space camp   \n",
-      "2     graduated from masters program   \n",
-      "3      working on college/university   \n",
-      "4  graduated from college/university   \n",
-      "\n",
-      "                                              essay0  \\\n",
-      "0  about me:<br />\\n<br />\\ni would love to think...   \n",
-      "1  i am a chef: this is what that means.<br />\\n1...   \n",
-      "2  i'm not ashamed of much, but writing public te...   \n",
-      "3          i work in a library and go to school. . .   \n",
-      "4  hey how's it going? currently vague on the pro...   \n",
-      "\n",
-      "                                              essay1  \\\n",
-      "0  currently working as an international agent fo...   \n",
-      "1  dedicating everyday to being an unbelievable b...   \n",
-      "2  i make nerdy software for musicians, artists, ...   \n",
-      "3          reading things written by old dead people   \n",
-      "4                         work work work work + play   \n",
-      "\n",
-      "                                              essay2  \\\n",
-      "0  making people laugh.<br />\\nranting about a go...   \n",
-      "1  being silly. having ridiculous amonts of fun w...   \n",
-      "2  improvising in different contexts. alternating...   \n",
-      "3  playing synthesizers and organizing books acco...   \n",
-      "4  creating imagery to look at:<br />\\nhttp://bag...   \n",
-      "\n",
-      "                                              essay3  ... diet_strictness  \\\n",
-      "0  the way i look. i am a six foot half asian, ha...  ...          strict   \n",
-      "1                                                     ...        flexible   \n",
-      "2  my large jaw and large glasses are the physica...  ...        standard   \n",
-      "3                  socially awkward but i do my best  ...        standard   \n",
-      "4            i smile a lot and my inquisitive nature  ...         unknown   \n",
-      "\n",
-      "  education_status education_level presence has_kids wants_kids likes_dogs  \\\n",
-      "0      in progress         college   active       no      maybe        yes   \n",
-      "1      in progress         unknown   active       no      maybe        yes   \n",
-      "2         finished         masters   active  unknown    unknown    unknown   \n",
-      "3      in progress         college   active  unknown         no    unknown   \n",
-      "4         finished         college   active  unknown    unknown        yes   \n",
-      "\n",
-      "   has_dogs  likes_cats has_cats  \n",
-      "0   unknown         yes  unknown  \n",
-      "1   unknown         yes  unknown  \n",
-      "2   unknown     unknown      yes  \n",
-      "3   unknown         yes  unknown  \n",
-      "4   unknown         yes  unknown  \n",
-      "\n",
-      "[5 rows x 42 columns]\n"
+      "['sometimes' 'no' 'unknown' 'when drinking' 'yes' 'trying to quit']\n",
+      "['english' 'english (fluently), spanish (poorly), french (poorly)'\n",
+      " 'english, french, c++' ...\n",
+      " 'english (fluently), hindi (poorly), french (poorly), tamil (okay), spanish (poorly)'\n",
+      " 'english (fluently), french (poorly), japanese (poorly), latin (poorly)'\n",
+      " 'english (fluently), french, farsi']\n",
+      "['english', '', 'unknown', 'afrikaans', 'french', 'portuguese']\n"
      ]
     }
    ],
@@ -101,7 +51,7 @@
     "data = data.dropna(subset=['height'])\n",
     "\n",
     "#fill categorical columns with unkown\n",
-    "cat_cols = data.select_dtypes(include=['object', 'category']).columns\n",
+    "cat_cols = data.columns\n",
     "print(cat_cols)\n",
     "data[cat_cols] = data[cat_cols].fillna('unknown')\n",
     "\n",
@@ -362,7 +312,74 @@
     "\n",
     "data['has_cats'] = np.select(has_cats_conditions, has_cats_choices, default = 'unknown')\n",
     "\n",
-    "print(data.head())\n"
+    "# religion\n",
+    "#print(data.religion.unique())\n",
+    "\n",
+    "religion_dedication_condition = [\n",
+    "    data['religion'].str.contains('very serious', case = False),\n",
+    "    data['religion'].str.contains('not too serious', case = False),\n",
+    "    data['religion'].str.contains('somewhat', case = False),\n",
+    "    data['religion'].str.contains('laughing', case = False)\n",
+    "]\n",
+    "\n",
+    "religion_dedication_values = ['very dedicated', 'dedicated', 'partially dedicated', 'not dedicated']\n",
+    "\n",
+    "data['religion_dedication'] = np.select(religion_dedication_condition, religion_dedication_values, default = 'unknown')\n",
+    "\n",
+    "def set_religion(r):\n",
+    "    return r.split(' ', 2)[0]\n",
+    "\n",
+    "data['religion'] = data.religion.apply(set_religion)\n",
+    "\n",
+    "#sex - no changes needed\n",
+    "#print(data.sex.unique())\n",
+    "\n",
+    "#sign \n",
+    "#print(data.sign.unique())\n",
+    "\n",
+    "data['sign'] = data['sign'].str.replace('doesn&rsquo;t', 'doesn\\'t', regex=False)\n",
+    "data['sign'] = data['sign'].str.replace('it&rsquo;s', 'it\\'s', regex=False)\n",
+    "\n",
+    "sign_importance_conditions = [\n",
+    "    data['sign'].str.contains('doesn\\'t matter', case = False),\n",
+    "    data['sign'].str.contains('fun', case = False),\n",
+    "    data['sign'].str.contains('it matters', case = False)\n",
+    "]\n",
+    "\n",
+    "sign_importance_options = ['not important', 'fun', 'important']\n",
+    "\n",
+    "data['sign_importance'] = np.select(sign_importance_conditions, sign_importance_options, default = 'unknown')\n",
+    "\n",
+    "def set_sign(sign):\n",
+    "    return sign.split(' ', 2)[0]\n",
+    "\n",
+    "data['sign'] = data['sign'].apply(set_sign)\n",
+    "\n",
+    "#smokes\n",
+    "print(data.smokes.unique())\n",
+    "\n",
+    "map_smoking = {\n",
+    "    'when drinking': 'sometimes',\n",
+    "    'trying to quit': 'yes'\n",
+    "}\n",
+    "\n",
+    "data['smokes'] = data['smokes'].replace(map_smoking)\n",
+    "\n",
+    "#speaks\n",
+    "print(data.speaks.unique())\n",
+    "\n",
+    "unique_languages = []\n",
+    "for record in data.speaks.unique():\n",
+    "    languages = record.split(',')\n",
+    "    for lang in languages:\n",
+    "        l = lang.split(' ')[0]\n",
+    "        if l not in unique_languages:\n",
+    "            unique_languages.append(l)\n",
+    "\n",
+    "print(unique_languages)\n",
+    "\n",
+    "#TO FIX - THE RECORDS WITH SPACES ARE NOT BEING IDENTIFIED CORRECTLY\n",
+    "    \n"
    ]
   }
  ],
