--- a/date-a-scientist.ipynb
+++ b/date-a-scientist.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -17,13 +17,12 @@
       "       'last_online', 'location', 'offspring', 'orientation', 'pets',\n",
       "       'religion', 'sex', 'sign', 'smokes', 'speaks', 'status'],\n",
       "      dtype='object')\n",
-      "['sometimes' 'no' 'unknown' 'when drinking' 'yes' 'trying to quit']\n",
       "['english' 'english (fluently), spanish (poorly), french (poorly)'\n",
       " 'english, french, c++' ...\n",
       " 'english (fluently), hindi (poorly), french (poorly), tamil (okay), spanish (poorly)'\n",
       " 'english (fluently), french (poorly), japanese (poorly), latin (poorly)'\n",
       " 'english (fluently), french, farsi']\n",
-      "['english', '', 'unknown', 'afrikaans', 'french', 'portuguese']\n"
+      "{'english': 7849, 'spanish': 3755, 'french': 2872, 'german': 1497, 'c++': 1049, 'chinese': 1047, 'italian': 1039, 'japanese': 1021, 'russian': 651, 'other': 563, 'portuguese': 549, 'hebrew': 444, 'hindi': 402, 'arabic': 382, 'sign': 379, 'latin': 335, 'tagalog': 316, 'lisp': 298, 'korean': 279, 'swedish': 196, 'dutch': 179, 'vietnamese': 175, 'ancient': 165, 'farsi': 164, 'yiddish': 155, 'thai': 154, 'greek': 137, 'turkish': 123, 'swahili': 117, 'irish': 107, 'polish': 106, 'urdu': 106, 'czech': 101, 'indonesian': 97, 'sanskrit': 96, 'danish': 95, 'esperanto': 93, 'tamil': 85, 'norwegian': 80, 'romanian': 80, 'hawaiian': 77, 'afrikaans': 74, 'hungarian': 70, 'persian': 66, 'catalan': 65, 'bengali': 64, 'serbian': 59, 'ukrainian': 54, 'croatian': 53, 'icelandic': 44, 'finnish': 42, 'cebuano': 39, 'malay': 39, 'bulgarian': 38, 'khmer': 37, 'slovak': 32, 'basque': 29, 'welsh': 28, 'gujarati': 25, 'ilongo': 25, 'occitan': 24, 'maori': 21, 'mongolian': 20, 'tibetan': 18, 'latvian': 17, 'estonian': 16, 'albanian': 15, 'lithuanian': 14, 'belarusan': 13, 'georgian': 13, 'frisian': 13, 'chechen': 12, 'rotuman': 12, 'breton': 9, 'armenian': 9, 'slovenian': 8, 'unknown': 1, 'sardinian': 1}\n"
      ]
     }
    ],
@@ -356,7 +355,7 @@
     "data['sign'] = data['sign'].apply(set_sign)\n",
     "\n",
     "#smokes\n",
-    "print(data.smokes.unique())\n",
+    "#print(data.smokes.unique())\n",
     "\n",
     "map_smoking = {\n",
     "    'when drinking': 'sometimes',\n",
@@ -368,26 +367,29 @@
     "#speaks\n",
     "print(data.speaks.unique())\n",
     "\n",
-    "unique_languages = []\n",
+    "language_counts = {}\n",
     "for record in data.speaks.unique():\n",
     "    languages = record.split(',')\n",
     "    for lang in languages:\n",
-    "        l = lang.split(' ')[0]\n",
-    "        if l not in unique_languages:\n",
-    "            unique_languages.append(l)\n",
+    "        l = lang.strip().split(' ')[0]\n",
+    "        if l in language_counts:\n",
+    "            language_counts[l] += 1\n",
+    "        else:\n",
+    "            language_counts[l] = 1\n",
     "\n",
-    "print(unique_languages)\n",
+    "sorted_langs = dict(sorted(language_counts.items(), key=lambda item: item[1], reverse=True))\n",
+    "print(sorted_langs)\n",
     "\n",
-    "#TO FIX - THE RECORDS WITH SPACES ARE NOT BEING IDENTIFIED CORRECTLY\n",
+    "#Next step: add 1 column for each of the top 10 and add the level for each user\n",
     "    \n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -399,7 +401,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
