--- a/date-a-scientist.ipynb
+++ b/date-a-scientist.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -17,12 +17,71 @@
       "       'last_online', 'location', 'offspring', 'orientation', 'pets',\n",
       "       'religion', 'sex', 'sign', 'smokes', 'speaks', 'status'],\n",
       "      dtype='object')\n",
-      "['english' 'english (fluently), spanish (poorly), french (poorly)'\n",
-      " 'english, french, c++' ...\n",
-      " 'english (fluently), hindi (poorly), french (poorly), tamil (okay), spanish (poorly)'\n",
-      " 'english (fluently), french (poorly), japanese (poorly), latin (poorly)'\n",
-      " 'english (fluently), french, farsi']\n",
-      "{'english': 7849, 'spanish': 3755, 'french': 2872, 'german': 1497, 'c++': 1049, 'chinese': 1047, 'italian': 1039, 'japanese': 1021, 'russian': 651, 'other': 563, 'portuguese': 549, 'hebrew': 444, 'hindi': 402, 'arabic': 382, 'sign': 379, 'latin': 335, 'tagalog': 316, 'lisp': 298, 'korean': 279, 'swedish': 196, 'dutch': 179, 'vietnamese': 175, 'ancient': 165, 'farsi': 164, 'yiddish': 155, 'thai': 154, 'greek': 137, 'turkish': 123, 'swahili': 117, 'irish': 107, 'polish': 106, 'urdu': 106, 'czech': 101, 'indonesian': 97, 'sanskrit': 96, 'danish': 95, 'esperanto': 93, 'tamil': 85, 'norwegian': 80, 'romanian': 80, 'hawaiian': 77, 'afrikaans': 74, 'hungarian': 70, 'persian': 66, 'catalan': 65, 'bengali': 64, 'serbian': 59, 'ukrainian': 54, 'croatian': 53, 'icelandic': 44, 'finnish': 42, 'cebuano': 39, 'malay': 39, 'bulgarian': 38, 'khmer': 37, 'slovak': 32, 'basque': 29, 'welsh': 28, 'gujarati': 25, 'ilongo': 25, 'occitan': 24, 'maori': 21, 'mongolian': 20, 'tibetan': 18, 'latvian': 17, 'estonian': 16, 'albanian': 15, 'lithuanian': 14, 'belarusan': 13, 'georgian': 13, 'frisian': 13, 'chechen': 12, 'rotuman': 12, 'breton': 9, 'armenian': 9, 'slovenian': 8, 'unknown': 1, 'sardinian': 1}\n"
+      "   age body_type    drinks      drugs ethnicity  height             job  \\\n",
+      "0   22      plus  moderate      never     asian    75.0  Transportation   \n",
+      "1   35   average     heavy  sometimes     white    70.0         Service   \n",
+      "2   38      slim  moderate    unknown   unknown    68.0           Other   \n",
+      "3   23      slim  moderate    unknown     white    71.0         Student   \n",
+      "4   29       fit  moderate      never     asian    66.0        Creative   \n",
+      "\n",
+      "     location orientation     religion  ... presence has_kids wants_kids  \\\n",
+      "0  california    straight  agnosticism  ...   active       no      maybe   \n",
+      "1  california    straight  agnosticism  ...   active       no      maybe   \n",
+      "2  california    straight      unknown  ...   active  unknown    unknown   \n",
+      "3  california    straight      unknown  ...   active  unknown         no   \n",
+      "4  california    straight      unknown  ...   active  unknown    unknown   \n",
+      "\n",
+      "  likes_dogs has_dogs likes_cats has_cats religion_dedication sign_importance  \\\n",
+      "0        yes  unknown        yes  unknown      very dedicated         unknown   \n",
+      "1        yes  unknown        yes  unknown           dedicated         unknown   \n",
+      "2    unknown  unknown    unknown      yes             unknown   not important   \n",
+      "3    unknown  unknown        yes  unknown             unknown         unknown   \n",
+      "4        yes  unknown        yes  unknown             unknown         unknown   \n",
+      "\n",
+      "  languages_count  \n",
+      "0               1  \n",
+      "1               3  \n",
+      "2               2  \n",
+      "3               2  \n",
+      "4               1  \n",
+      "\n",
+      "[5 rows x 28 columns]\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 59871 entries, 0 to 59945\n",
+      "Data columns (total 28 columns):\n",
+      " #   Column               Non-Null Count  Dtype  \n",
+      "---  ------               --------------  -----  \n",
+      " 0   age                  59871 non-null  int64  \n",
+      " 1   body_type            59871 non-null  object \n",
+      " 2   drinks               59871 non-null  object \n",
+      " 3   drugs                59871 non-null  object \n",
+      " 4   ethnicity            59871 non-null  object \n",
+      " 5   height               59871 non-null  float64\n",
+      " 6   job                  59871 non-null  object \n",
+      " 7   location             59871 non-null  object \n",
+      " 8   orientation          59871 non-null  object \n",
+      " 9   religion             59871 non-null  object \n",
+      " 10  sex                  59871 non-null  object \n",
+      " 11  sign                 59871 non-null  object \n",
+      " 12  smokes               59871 non-null  object \n",
+      " 13  status               59871 non-null  object \n",
+      " 14  diet_type            59871 non-null  object \n",
+      " 15  diet_strictness      59871 non-null  object \n",
+      " 16  education_status     59871 non-null  object \n",
+      " 17  education_level      59871 non-null  object \n",
+      " 18  presence             59871 non-null  object \n",
+      " 19  has_kids             59871 non-null  object \n",
+      " 20  wants_kids           59871 non-null  object \n",
+      " 21  likes_dogs           59871 non-null  object \n",
+      " 22  has_dogs             59871 non-null  object \n",
+      " 23  likes_cats           59871 non-null  object \n",
+      " 24  has_cats             59871 non-null  object \n",
+      " 25  religion_dedication  59871 non-null  object \n",
+      " 26  sign_importance      59871 non-null  object \n",
+      " 27  languages_count      59871 non-null  int64  \n",
+      "dtypes: float64(1), int64(2), object(25)\n",
+      "memory usage: 13.2+ MB\n",
+      "None\n"
      ]
     }
    ],
@@ -365,8 +424,9 @@
     "data['smokes'] = data['smokes'].replace(map_smoking)\n",
     "\n",
     "#speaks\n",
-    "print(data.speaks.unique())\n",
+    "#print(data.speaks.unique())\n",
     "\n",
+    "\"\"\"\n",
     "language_counts = {}\n",
     "for record in data.speaks.unique():\n",
     "    languages = record.split(',')\n",
@@ -378,10 +438,68 @@
     "            language_counts[l] = 1\n",
     "\n",
     "sorted_langs = dict(sorted(language_counts.items(), key=lambda item: item[1], reverse=True))\n",
-    "print(sorted_langs)\n",
+    "\"\"\"\n",
+    "\n",
+    "#decided for now to only store the number of languages spoken\n",
+    "\n",
+    "def get_language_count(record):\n",
+    "    language_count = 0\n",
+    "    languages = record.split(',')\n",
+    "    for lang in languages:\n",
+    "        l = lang.strip().split(' ')[0]\n",
+    "        if l not in ['c++', 'lisp', 'ancient', 'unknown', 'sign']:\n",
+    "            language_count += 1\n",
+    "    return language_count\n",
+    "\n",
+    "data['languages_count'] = data['speaks'].apply(get_language_count)\n",
+    "#print(data[['languages_count', 'speaks']].head())\n",
     "\n",
     "#Next step: add 1 column for each of the top 10 and add the level for each user\n",
-    "    \n"
+    "\n",
+    "#status\n",
+    "#print(data.status.unique())\n",
+    "\n",
+    "status_map = {\n",
+    "    'single': 'single',\n",
+    "    'available': 'single',\n",
+    "    'seeing someone': 'committed',\n",
+    "    'married': 'committed',\n",
+    "    'unknown': 'unknown'\n",
+    "}\n",
+    "\n",
+    "data['status'] = data['status'].map(status_map)\n",
+    "#print(data.status.unique())\n",
+    "\n",
+    "#numerical fields\n",
+    "#print(data.describe())\n",
+    "\n",
+    "\"\"\"\n",
+    "import matplotlib.pyplot as plt\n",
+    "data['height'].hist(bins=30)\n",
+    "plt.xlabel('Height (inches)')\n",
+    "plt.ylabel('Count')\n",
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "data['age'].hist(bins=30)\n",
+    "plt.xlabel('Age')\n",
+    "plt.ylabel('Count')\n",
+    "plt.show()\n",
+    "\"\"\"\n",
+    "\n",
+    "data = data[(data['age'] >= 18) & (data['age'] <= 90)] # reasonable interval for age\n",
+    "data = data[(data['height'] >= 54) & (data['height'] <= 84)] # reasonable interval for height\n",
+    "\n",
+    "data = data.drop(columns=['income']) #around 80% of values are missing, will just drop the column\n",
+    "\n",
+    "# still need to drop: diet, education, last_online, offspring, pets, speaks -> other columns were created based on this information\n",
+    "\n",
+    "data = data.drop(columns=['diet', 'education', 'last_online', 'offspring', 'pets', 'speaks'])\n",
+    "\n",
+    "not_essay_cols = [col for col in data.columns if 'essay' not in col]\n",
+    "print(data[not_essay_cols].head())\n",
+    "print(data[not_essay_cols].info())\n",
+    "\n"
    ]
   }
  ],
