--- a/date-a-scientist.ipynb
+++ b/date-a-scientist.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 91,
    "metadata": {
     "scrolled": true
    },
@@ -496,18 +496,115 @@
     "\n",
     "data = data.drop(columns=['diet', 'education', 'last_online', 'offspring', 'pets', 'speaks'])\n",
     "\n",
+    "#now drop columns where unknowns are more than 50%\n",
+    "\n",
+    "cat_cols = df.select_dtypes(include=['object','category']).columns.tolist()\n",
+    "threshold = 0.5\n",
+    "high_unknown_cols = []\n",
+    "for col in cat_cols:\n",
+    "    p = (df[col] == 'unknown').mean()\n",
+    "    if p > threshold:\n",
+    "        high_unknown_cols.append(col)\n",
+    "\n",
+    "#print(high_unknown_cols)\n",
+    "\n",
+    "df = df.drop(columns=high_unknown_cols)\n",
+    "\n",
     "not_essay_cols = [col for col in data.columns if 'essay' not in col]\n",
     "print(data[not_essay_cols].head())\n",
-    "print(data[not_essay_cols].info())\n",
-    "\n"
+    "print(data[not_essay_cols].info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.535365344467641\n",
+      "0.8592066805845512\n",
+      "age                              0.083873\n",
+      "height                           0.071163\n",
+      "languages_count                  0.038180\n",
+      "presence_not active              0.020033\n",
+      "likes_dogs_yes                   0.018874\n",
+      "ethnicity_white                  0.017953\n",
+      "likes_cats_yes                   0.017627\n",
+      "drugs_unknown                    0.016329\n",
+      "drinks_moderate                  0.016021\n",
+      "job_Other                        0.015809\n",
+      "sex_m                            0.015684\n",
+      "religion_dedication_unknown      0.014695\n",
+      "body_type_fit                    0.014554\n",
+      "has_kids_unknown                 0.014063\n",
+      "education_level_masters          0.013776\n",
+      "religion_unknown                 0.013747\n",
+      "sign_importance_not important    0.013735\n",
+      "drugs_sometimes                  0.013718\n",
+      "has_dogs_yes                     0.012469\n",
+      "sign_importance_unknown          0.012406\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler, LabelEncoder\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import classification_report\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "df = data[not_essay_cols]\n",
+    "#print(df.body_type.value_counts())\n",
+    "\n",
+    "col_to_predict = 'orientation'\n",
+    "\n",
+    "#remove rows where the target variable is unknown\n",
+    "df = df[df[col_to_predict] != 'unknown']\n",
+    "\n",
+    "cat_cols = df.select_dtypes(include=['object','category']).columns.tolist()\n",
+    "cat_cols = [col for col in cat_cols if col != col_to_predict]\n",
+    "num_cols = df.select_dtypes(include=['float64', 'int64']).columns.tolist()\n",
+    "\n",
+    "#cat_cols = ['sex', 'presence', 'likes_dogs', 'has_kids', 'ethnicity', 'likes_cats']\n",
+    "#num_cols = ['age', 'height', 'languages_count']\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "\n",
+    "df[num_cols] = scaler.fit_transform(df[num_cols])\n",
+    "df_dummies = pd.get_dummies(df[cat_cols], drop_first = True)\n",
+    "\n",
+    "x = pd.concat([df[num_cols], df_dummies], axis = 1)\n",
+    "y = df[col_to_predict]\n",
+    "\n",
+    "le = LabelEncoder()\n",
+    "y = le.fit_transform(y)\n",
+    "\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size = 0.2, random_state = 24)\n",
+    "\n",
+    "model = LogisticRegression(class_weight='balanced', solver = 'lbfgs', max_iter = 1000)\n",
+    "model.fit(x_train, y_train)\n",
+    "print(model.score(x_test, y_test))\n",
+    "\n",
+    "rf = RandomForestClassifier()\n",
+    "rf.fit(x_train, y_train)\n",
+    "print(rf.score(x_test, y_test))\n",
+    "\n",
+    "importances = pd.Series(rf.feature_importances_, index=x_train.columns)\n",
+    "print(importances.sort_values(ascending=False).head(20))\n",
+    "\n",
+    "#Check chat gpt code review"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -519,7 +616,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
