--- a/date-a-scientist.ipynb
+++ b/date-a-scientist.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -24,63 +24,56 @@
       "3   23      slim  moderate    unknown     white    71.0         Student   \n",
       "4   29       fit  moderate      never     asian    66.0        Creative   \n",
       "\n",
-      "     location orientation     religion  ... presence has_kids wants_kids  \\\n",
-      "0  california    straight  agnosticism  ...   active       no      maybe   \n",
-      "1  california    straight  agnosticism  ...   active       no      maybe   \n",
-      "2  california    straight      unknown  ...   active  unknown    unknown   \n",
-      "3  california    straight      unknown  ...   active  unknown         no   \n",
-      "4  california    straight      unknown  ...   active  unknown    unknown   \n",
+      "     location orientation     religion  ...      sign     smokes  status  \\\n",
+      "0  california    straight  agnosticism  ...    gemini  sometimes  single   \n",
+      "1  california    straight  agnosticism  ...    cancer         no  single   \n",
+      "2  california    straight      unknown  ...    pisces         no  single   \n",
+      "3  california    straight      unknown  ...    pisces         no  single   \n",
+      "4  california    straight      unknown  ...  aquarius         no  single   \n",
       "\n",
-      "  likes_dogs has_dogs likes_cats has_cats religion_dedication sign_importance  \\\n",
-      "0        yes  unknown        yes  unknown      very dedicated         unknown   \n",
-      "1        yes  unknown        yes  unknown           dedicated         unknown   \n",
-      "2    unknown  unknown    unknown      yes             unknown   not important   \n",
-      "3    unknown  unknown        yes  unknown             unknown         unknown   \n",
-      "4        yes  unknown        yes  unknown             unknown         unknown   \n",
+      "    diet_type diet_strictness education_status education_level presence  \\\n",
+      "0    anything          strict      in progress         college   active   \n",
+      "1       other        flexible      in progress         unknown   active   \n",
+      "2    anything        standard         finished         masters   active   \n",
+      "3  vegetarian        standard      in progress         college   active   \n",
+      "4     unknown         unknown         finished         college   active   \n",
       "\n",
-      "  languages_count  \n",
-      "0               1  \n",
-      "1               3  \n",
-      "2               2  \n",
-      "3               2  \n",
-      "4               1  \n",
+      "  sign_importance languages_count  \n",
+      "0         unknown               1  \n",
+      "1         unknown               3  \n",
+      "2   not important               2  \n",
+      "3         unknown               2  \n",
+      "4         unknown               1  \n",
       "\n",
-      "[5 rows x 28 columns]\n",
+      "[5 rows x 21 columns]\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Index: 59871 entries, 0 to 59945\n",
-      "Data columns (total 28 columns):\n",
-      " #   Column               Non-Null Count  Dtype  \n",
-      "---  ------               --------------  -----  \n",
-      " 0   age                  59871 non-null  int64  \n",
-      " 1   body_type            59871 non-null  object \n",
-      " 2   drinks               59871 non-null  object \n",
-      " 3   drugs                59871 non-null  object \n",
-      " 4   ethnicity            59871 non-null  object \n",
-      " 5   height               59871 non-null  float64\n",
-      " 6   job                  59871 non-null  object \n",
-      " 7   location             59871 non-null  object \n",
-      " 8   orientation          59871 non-null  object \n",
-      " 9   religion             59871 non-null  object \n",
-      " 10  sex                  59871 non-null  object \n",
-      " 11  sign                 59871 non-null  object \n",
-      " 12  smokes               59871 non-null  object \n",
-      " 13  status               59871 non-null  object \n",
-      " 14  diet_type            59871 non-null  object \n",
-      " 15  diet_strictness      59871 non-null  object \n",
-      " 16  education_status     59871 non-null  object \n",
-      " 17  education_level      59871 non-null  object \n",
-      " 18  presence             59871 non-null  object \n",
-      " 19  has_kids             59871 non-null  object \n",
-      " 20  wants_kids           59871 non-null  object \n",
-      " 21  likes_dogs           59871 non-null  object \n",
-      " 22  has_dogs             59871 non-null  object \n",
-      " 23  likes_cats           59871 non-null  object \n",
-      " 24  has_cats             59871 non-null  object \n",
-      " 25  religion_dedication  59871 non-null  object \n",
-      " 26  sign_importance      59871 non-null  object \n",
-      " 27  languages_count      59871 non-null  int64  \n",
-      "dtypes: float64(1), int64(2), object(25)\n",
-      "memory usage: 13.2+ MB\n",
+      "Data columns (total 21 columns):\n",
+      " #   Column            Non-Null Count  Dtype  \n",
+      "---  ------            --------------  -----  \n",
+      " 0   age               59871 non-null  int64  \n",
+      " 1   body_type         59871 non-null  object \n",
+      " 2   drinks            59871 non-null  object \n",
+      " 3   drugs             59871 non-null  object \n",
+      " 4   ethnicity         59871 non-null  object \n",
+      " 5   height            59871 non-null  float64\n",
+      " 6   job               59871 non-null  object \n",
+      " 7   location          59871 non-null  object \n",
+      " 8   orientation       59871 non-null  object \n",
+      " 9   religion          59871 non-null  object \n",
+      " 10  sex               59871 non-null  object \n",
+      " 11  sign              59871 non-null  object \n",
+      " 12  smokes            59871 non-null  object \n",
+      " 13  status            59871 non-null  object \n",
+      " 14  diet_type         59871 non-null  object \n",
+      " 15  diet_strictness   59871 non-null  object \n",
+      " 16  education_status  59871 non-null  object \n",
+      " 17  education_level   59871 non-null  object \n",
+      " 18  presence          59871 non-null  object \n",
+      " 19  sign_importance   59871 non-null  object \n",
+      " 20  languages_count   59871 non-null  int64  \n",
+      "dtypes: float64(1), int64(2), object(18)\n",
+      "memory usage: 10.0+ MB\n",
       "None\n"
      ]
     }
@@ -498,17 +491,17 @@
     "\n",
     "#now drop columns where unknowns are more than 50%\n",
     "\n",
-    "cat_cols = df.select_dtypes(include=['object','category']).columns.tolist()\n",
+    "cat_cols = data.select_dtypes(include=['object','category']).columns.tolist()\n",
     "threshold = 0.5\n",
     "high_unknown_cols = []\n",
     "for col in cat_cols:\n",
-    "    p = (df[col] == 'unknown').mean()\n",
+    "    p = (data[col] == 'unknown').mean()\n",
     "    if p > threshold:\n",
     "        high_unknown_cols.append(col)\n",
     "\n",
     "#print(high_unknown_cols)\n",
     "\n",
-    "df = df.drop(columns=high_unknown_cols)\n",
+    "data = data.drop(columns=high_unknown_cols)\n",
     "\n",
     "not_essay_cols = [col for col in data.columns if 'essay' not in col]\n",
     "print(data[not_essay_cols].head())\n",
@@ -517,37 +510,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.535365344467641\n",
-      "0.8592066805845512\n",
-      "age                              0.083873\n",
-      "height                           0.071163\n",
-      "languages_count                  0.038180\n",
-      "presence_not active              0.020033\n",
-      "likes_dogs_yes                   0.018874\n",
-      "ethnicity_white                  0.017953\n",
-      "likes_cats_yes                   0.017627\n",
-      "drugs_unknown                    0.016329\n",
-      "drinks_moderate                  0.016021\n",
-      "job_Other                        0.015809\n",
-      "sex_m                            0.015684\n",
-      "religion_dedication_unknown      0.014695\n",
-      "body_type_fit                    0.014554\n",
-      "has_kids_unknown                 0.014063\n",
-      "education_level_masters          0.013776\n",
-      "religion_unknown                 0.013747\n",
-      "sign_importance_not important    0.013735\n",
-      "drugs_sometimes                  0.013718\n",
-      "has_dogs_yes                     0.012469\n",
-      "sign_importance_unknown          0.012406\n",
-      "dtype: float64\n"
+      "orientation\n",
+      "straight    51537\n",
+      "gay          5570\n",
+      "bisexual     2764\n",
+      "Name: count, dtype: int64\n",
+      "['bisexual' 'gay' 'straight']\n",
+      "2    0.860801\n",
+      "1    0.093033\n",
+      "0    0.046166\n",
+      "Name: proportion, dtype: float64\n",
+      "2    0.860803\n",
+      "1    0.093035\n",
+      "0    0.046163\n",
+      "Name: proportion, dtype: float64\n",
+      "2    0.860793\n",
+      "1    0.093027\n",
+      "0    0.046180\n",
+      "Name: proportion, dtype: float64\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"\\nmodel = LogisticRegression(class_weight='balanced', solver = 'lbfgs', max_iter = 1000)\\nmodel.fit(x_train, y_train)\\ny_pred_model = model.predict(x_test)\\nmodel_score = classification_report(y_test, y_pred_model)\\nprint('Classification report for LR:')\\nprint(model_score)\\n\\nrf = RandomForestClassifier(class_weight='balanced')\\nrf.fit(x_train, y_train)\\ny_pred_rf = rf.predict(x_test)\\nrf_score = classification_report(y_test, y_pred_rf)\\nprint('Classification report for RF:')\\nprint(rf_score)\\n\\nimportances = pd.Series(rf.feature_importances_, index=x_train.columns)\\nprint(importances.sort_values(ascending=False).head(20))\\n\\n#Check chat gpt code review\\n\""
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -556,11 +554,14 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import classification_report\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.feature_selection import VarianceThreshold\n",
+    "#from imblearn.over_sampling import SMOTE\n",
     "\n",
-    "df = data[not_essay_cols]\n",
-    "#print(df.body_type.value_counts())\n",
+    "df = data[not_essay_cols] \n",
     "\n",
     "col_to_predict = 'orientation'\n",
+    "\n",
+    "print(df[col_to_predict].value_counts())\n",
     "\n",
     "#remove rows where the target variable is unknown\n",
     "df = df[df[col_to_predict] != 'unknown']\n",
@@ -569,42 +570,64 @@
     "cat_cols = [col for col in cat_cols if col != col_to_predict]\n",
     "num_cols = df.select_dtypes(include=['float64', 'int64']).columns.tolist()\n",
     "\n",
-    "#cat_cols = ['sex', 'presence', 'likes_dogs', 'has_kids', 'ethnicity', 'likes_cats']\n",
+    "#cat_cols = ['sex', 'drugs', 'presence', 'ethnicity', 'drinks', 'job']\n",
     "#num_cols = ['age', 'height', 'languages_count']\n",
     "\n",
     "scaler = StandardScaler()\n",
     "\n",
-    "df[num_cols] = scaler.fit_transform(df[num_cols])\n",
+    "df_scaled = scaler.fit_transform(df[num_cols])\n",
+    "df[num_cols] = pd.DataFrame(df_scaled, columns=num_cols, index=df.index)\n",
     "df_dummies = pd.get_dummies(df[cat_cols], drop_first = True)\n",
     "\n",
     "x = pd.concat([df[num_cols], df_dummies], axis = 1)\n",
     "y = df[col_to_predict]\n",
     "\n",
+    "#selector = VarianceThreshold(threshold=0.01) #drop columns with low variance\n",
+    "#x = selector.fit_transform(x)\n",
+    "#print(x)\n",
+    "\n",
+    "\n",
     "le = LabelEncoder()\n",
     "y = le.fit_transform(y)\n",
+    "print(le.classes_)\n",
     "\n",
-    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size = 0.2, random_state = 24)\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2, random_state=24, stratify=y)\n",
     "\n",
+    "print(pd.Series(y).value_counts(normalize=True))        # full\n",
+    "print(pd.Series(y_train).value_counts(normalize=True))  # train\n",
+    "print(pd.Series(y_test).value_counts(normalize=True))   # test\n",
+    "\n",
+    "#smote = SMOTE(random_state = 42)\n",
+    "#x_train_resampled, y_train_resampled = smote.fit_resample(x_train, y_train)\n",
+    "\n",
+    "\"\"\"\n",
     "model = LogisticRegression(class_weight='balanced', solver = 'lbfgs', max_iter = 1000)\n",
     "model.fit(x_train, y_train)\n",
-    "print(model.score(x_test, y_test))\n",
+    "y_pred_model = model.predict(x_test)\n",
+    "model_score = classification_report(y_test, y_pred_model)\n",
+    "print('Classification report for LR:')\n",
+    "print(model_score)\n",
     "\n",
-    "rf = RandomForestClassifier()\n",
+    "rf = RandomForestClassifier(class_weight='balanced')\n",
     "rf.fit(x_train, y_train)\n",
-    "print(rf.score(x_test, y_test))\n",
+    "y_pred_rf = rf.predict(x_test)\n",
+    "rf_score = classification_report(y_test, y_pred_rf)\n",
+    "print('Classification report for RF:')\n",
+    "print(rf_score)\n",
     "\n",
     "importances = pd.Series(rf.feature_importances_, index=x_train.columns)\n",
     "print(importances.sort_values(ascending=False).head(20))\n",
     "\n",
-    "#Check chat gpt code review"
+    "#Check chat gpt code review\n",
+    "\"\"\""
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -616,7 +639,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
