--- a/date-a-scientist.ipynb
+++ b/date-a-scientist.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -510,42 +510,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "orientation\n",
-      "straight    51537\n",
-      "gay          5570\n",
-      "bisexual     2764\n",
+      "status\n",
+      "single       57490\n",
+      "committed     2371\n",
+      "unknown         10\n",
       "Name: count, dtype: int64\n",
-      "['bisexual' 'gay' 'straight']\n",
-      "2    0.860801\n",
-      "1    0.093033\n",
-      "0    0.046166\n",
+      "['committed' 'single']\n",
+      "1    0.500132\n",
+      "0    0.499868\n",
       "Name: proportion, dtype: float64\n",
-      "2    0.860803\n",
-      "1    0.093035\n",
-      "0    0.046163\n",
-      "Name: proportion, dtype: float64\n",
-      "2    0.860793\n",
-      "1    0.093027\n",
-      "0    0.046180\n",
-      "Name: proportion, dtype: float64\n"
+      "Classification report for LR:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.70      0.72      0.71       475\n",
+      "           1       0.71      0.69      0.70       474\n",
+      "\n",
+      "    accuracy                           0.70       949\n",
+      "   macro avg       0.70      0.70      0.70       949\n",
+      "weighted avg       0.70      0.70      0.70       949\n",
+      "\n",
+      "Classification report for RF:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.68      0.70      0.69       475\n",
+      "           1       0.69      0.67      0.68       474\n",
+      "\n",
+      "    accuracy                           0.68       949\n",
+      "   macro avg       0.68      0.68      0.68       949\n",
+      "weighted avg       0.68      0.68      0.68       949\n",
+      "\n",
+      "age                     0.093573\n",
+      "height                  0.074874\n",
+      "presence_not active     0.053583\n",
+      "languages_count         0.039644\n",
+      "orientation_straight    0.025616\n",
+      "body_type_fit           0.022130\n",
+      "religion_unknown        0.020117\n",
+      "sex_m                   0.019366\n",
+      "ethnicity_white         0.019023\n",
+      "religion_atheism        0.018499\n",
+      "dtype: float64\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "\"\\nmodel = LogisticRegression(class_weight='balanced', solver = 'lbfgs', max_iter = 1000)\\nmodel.fit(x_train, y_train)\\ny_pred_model = model.predict(x_test)\\nmodel_score = classification_report(y_test, y_pred_model)\\nprint('Classification report for LR:')\\nprint(model_score)\\n\\nrf = RandomForestClassifier(class_weight='balanced')\\nrf.fit(x_train, y_train)\\ny_pred_rf = rf.predict(x_test)\\nrf_score = classification_report(y_test, y_pred_rf)\\nprint('Classification report for RF:')\\nprint(rf_score)\\n\\nimportances = pd.Series(rf.feature_importances_, index=x_train.columns)\\nprint(importances.sort_values(ascending=False).head(20))\\n\\n#Check chat gpt code review\\n\""
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -555,37 +567,42 @@
     "from sklearn.metrics import classification_report\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.feature_selection import VarianceThreshold\n",
-    "#from imblearn.over_sampling import SMOTE\n",
+    "from imblearn.over_sampling import SMOTE\n",
     "\n",
-    "df = data[not_essay_cols] \n",
+    "df = data[not_essay_cols] #don't want to take into account essays for this\n",
     "\n",
-    "col_to_predict = 'orientation'\n",
+    "col_to_predict = 'status'\n",
     "\n",
     "print(df[col_to_predict].value_counts())\n",
     "\n",
     "#remove rows where the target variable is unknown\n",
     "df = df[df[col_to_predict] != 'unknown']\n",
     "\n",
+    "#DO A FUNCTION FOR THIS!!!!!\n",
+    "\n",
+    "# Keep all minority class samples, downsample majority\n",
+    "df_minority = df[df[col_to_predict] != 'single']\n",
+    "df_majority = df[df[col_to_predict] == 'single'].sample(n=2371, random_state=42)\n",
+    "df_balanced = pd.concat([df_minority, df_majority])\n",
+    "\n",
+    "df=df_balanced\n",
+    "\n",
+    "\n",
     "cat_cols = df.select_dtypes(include=['object','category']).columns.tolist()\n",
     "cat_cols = [col for col in cat_cols if col != col_to_predict]\n",
     "num_cols = df.select_dtypes(include=['float64', 'int64']).columns.tolist()\n",
+    "num_cols = [col for col in num_cols if col != col_to_predict]\n",
     "\n",
-    "#cat_cols = ['sex', 'drugs', 'presence', 'ethnicity', 'drinks', 'job']\n",
+    "#cat_cols = ['sex', 'drugs', 'job', 'religion', 'body_type']\n",
     "#num_cols = ['age', 'height', 'languages_count']\n",
     "\n",
-    "scaler = StandardScaler()\n",
-    "\n",
-    "df_scaled = scaler.fit_transform(df[num_cols])\n",
-    "df[num_cols] = pd.DataFrame(df_scaled, columns=num_cols, index=df.index)\n",
     "df_dummies = pd.get_dummies(df[cat_cols], drop_first = True)\n",
     "\n",
     "x = pd.concat([df[num_cols], df_dummies], axis = 1)\n",
     "y = df[col_to_predict]\n",
     "\n",
-    "#selector = VarianceThreshold(threshold=0.01) #drop columns with low variance\n",
+    "#selector = VarianceThreshold(threshold=0.01)\n",
     "#x = selector.fit_transform(x)\n",
-    "#print(x)\n",
-    "\n",
     "\n",
     "le = LabelEncoder()\n",
     "y = le.fit_transform(y)\n",
@@ -593,14 +610,15 @@
     "\n",
     "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2, random_state=24, stratify=y)\n",
     "\n",
-    "print(pd.Series(y).value_counts(normalize=True))        # full\n",
-    "print(pd.Series(y_train).value_counts(normalize=True))  # train\n",
-    "print(pd.Series(y_test).value_counts(normalize=True))   # test\n",
+    "scaler = StandardScaler()\n",
+    "x_train[num_cols] = scaler.fit_transform(x_train[num_cols])\n",
+    "x_test[num_cols] = scaler.transform(x_test[num_cols])\n",
     "\n",
-    "#smote = SMOTE(random_state = 42)\n",
-    "#x_train_resampled, y_train_resampled = smote.fit_resample(x_train, y_train)\n",
+    "#smote = SMOTE(random_state=24)\n",
+    "#x_resampled, y_resampled = smote.fit_resample(x_train, y_train) #use SMOTE to make sure the classes are balanced\n",
     "\n",
-    "\"\"\"\n",
+    "print(pd.Series(y_train).value_counts(normalize=True))\n",
+    "\n",
     "model = LogisticRegression(class_weight='balanced', solver = 'lbfgs', max_iter = 1000)\n",
     "model.fit(x_train, y_train)\n",
     "y_pred_model = model.predict(x_test)\n",
@@ -616,18 +634,25 @@
     "print(rf_score)\n",
     "\n",
     "importances = pd.Series(rf.feature_importances_, index=x_train.columns)\n",
-    "print(importances.sort_values(ascending=False).head(20))\n",
+    "print(importances.sort_values(ascending=False).head(10))\n",
     "\n",
-    "#Check chat gpt code review\n",
-    "\"\"\""
+    "\n",
+    "#DO A FUNCTION TO MAKE THE CLASSES BALANCED"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -639,7 +664,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
