--- a/date-a-scientist.ipynb
+++ b/date-a-scientist.ipynb
@@ -4,6 +4,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "scrolled": true
    },
    "outputs": [
@@ -510,53 +513,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "status\n",
-      "single       57490\n",
-      "committed     2371\n",
-      "unknown         10\n",
+      "sex\n",
+      "m    35780\n",
+      "f    24091\n",
       "Name: count, dtype: int64\n",
-      "['committed' 'single']\n",
-      "1    0.500132\n",
-      "0    0.499868\n",
+      "['f' 'm']\n",
+      "education_level\n",
+      "1    0.5\n",
+      "0    0.5\n",
       "Name: proportion, dtype: float64\n",
       "Classification report for LR:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.70      0.72      0.71       475\n",
-      "           1       0.71      0.69      0.70       474\n",
+      "           0       0.83      0.87      0.85      4819\n",
+      "           1       0.91      0.88      0.89      7156\n",
       "\n",
-      "    accuracy                           0.70       949\n",
-      "   macro avg       0.70      0.70      0.70       949\n",
-      "weighted avg       0.70      0.70      0.70       949\n",
+      "    accuracy                           0.87     11975\n",
+      "   macro avg       0.87      0.87      0.87     11975\n",
+      "weighted avg       0.88      0.87      0.87     11975\n",
       "\n",
       "Classification report for RF:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.68      0.70      0.69       475\n",
-      "           1       0.69      0.67      0.68       474\n",
+      "           0       0.82      0.87      0.84      4819\n",
+      "           1       0.91      0.87      0.89      7156\n",
       "\n",
-      "    accuracy                           0.68       949\n",
-      "   macro avg       0.68      0.68      0.68       949\n",
-      "weighted avg       0.68      0.68      0.68       949\n",
+      "    accuracy                           0.87     11975\n",
+      "   macro avg       0.86      0.87      0.86     11975\n",
+      "weighted avg       0.87      0.87      0.87     11975\n",
       "\n",
-      "age                     0.093573\n",
-      "height                  0.074874\n",
-      "presence_not active     0.053583\n",
-      "languages_count         0.039644\n",
-      "orientation_straight    0.025616\n",
-      "body_type_fit           0.022130\n",
-      "religion_unknown        0.020117\n",
-      "sex_m                   0.019366\n",
-      "ethnicity_white         0.019023\n",
-      "religion_atheism        0.018499\n",
-      "dtype: float64\n"
+      "height                 0.402917\n",
+      "age                    0.058582\n",
+      "body_type_plus         0.030055\n",
+      "body_type_fit          0.027629\n",
+      "job_STEM               0.026882\n",
+      "languages_count        0.024502\n",
+      "ethnicity_white        0.014880\n",
+      "presence_not active    0.013149\n",
+      "drugs_unknown          0.011098\n",
+      "religion_unknown       0.010882\n",
+      "dtype: float64\n",
+      "1\n"
      ]
     }
    ],
@@ -571,7 +575,7 @@
     "\n",
     "df = data[not_essay_cols] #don't want to take into account essays for this\n",
     "\n",
-    "col_to_predict = 'status'\n",
+    "col_to_predict = 'sex'\n",
     "\n",
     "print(df[col_to_predict].value_counts())\n",
     "\n",
@@ -579,13 +583,37 @@
     "df = df[df[col_to_predict] != 'unknown']\n",
     "\n",
     "#DO A FUNCTION FOR THIS!!!!!\n",
+    "def downsample(df, col):\n",
+    "    min_count = df[col].value_counts().min()\n",
+    "    balanced_df = pd.concat([\n",
+    "        df[df[col] == category].sample(n=min_count, random_state=1)\n",
+    "        for category in df[col].unique()\n",
+    "    ])\n",
+    "    return balanced_df\n",
     "\n",
-    "# Keep all minority class samples, downsample majority\n",
-    "df_minority = df[df[col_to_predict] != 'single']\n",
-    "df_majority = df[df[col_to_predict] == 'single'].sample(n=2371, random_state=42)\n",
-    "df_balanced = pd.concat([df_minority, df_majority])\n",
+    "from sklearn.utils import resample\n",
     "\n",
-    "df=df_balanced\n",
+    "def upsample(df, target_col):\n",
+    "    # Split into majority and minority classes\n",
+    "    classes = df[target_col].value_counts().index\n",
+    "    max_count = df[target_col].value_counts().max()\n",
+    "\n",
+    "    df_upsampled = []\n",
+    "\n",
+    "    for cls in classes:\n",
+    "        df_class = df[df[target_col] == cls]\n",
+    "        df_class_upsampled = resample(\n",
+    "            df_class,\n",
+    "            replace=True,               # Sample with replacement\n",
+    "            n_samples=max_count,        # Match majority class\n",
+    "            random_state=42\n",
+    "        )\n",
+    "        df_upsampled.append(df_class_upsampled)\n",
+    "\n",
+    "    return pd.concat(df_upsampled).sample(frac=1, random_state=42).reset_index(drop=True)  # shuffle\n",
+    "\n",
+    "\n",
+    "#df = upsample(df, col_to_predict)\n",
     "\n",
     "\n",
     "cat_cols = df.select_dtypes(include=['object','category']).columns.tolist()\n",
@@ -609,6 +637,17 @@
     "print(le.classes_)\n",
     "\n",
     "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2, random_state=24, stratify=y)\n",
+    "\n",
+    "# Convert y_train back to Series with the correct index\n",
+    "y_train_series = pd.Series(y_train, index=x_train.index, name='education_level')\n",
+    "\n",
+    "# Concatenate features and target\n",
+    "train_data = pd.concat([x_train, y_train_series], axis=1)\n",
+    "\n",
+    "# Apply your upsampling function (assuming you have it)\n",
+    "train_bal = downsample(train_data, 'education_level')\n",
+    "x_train = train_bal.drop(columns = 'education_level')\n",
+    "y_train = train_bal['education_level']\n",
     "\n",
     "scaler = StandardScaler()\n",
     "x_train[num_cols] = scaler.fit_transform(x_train[num_cols])\n",
@@ -636,8 +675,21 @@
     "importances = pd.Series(rf.feature_importances_, index=x_train.columns)\n",
     "print(importances.sort_values(ascending=False).head(10))\n",
     "\n",
+    "from sklearn.svm import SVC\n",
     "\n",
-    "#DO A FUNCTION TO MAKE THE CLASSES BALANCED"
+    "model = SVC(class_weight='balanced')\n",
+    "print('1')\n",
+    "model.fit(x_train, y_train)\n",
+    "print('2')\n",
+    "y_pred = model.predict(x_test)\n",
+    "model_score = classification_report(y_test, y_pred)\n",
+    "print('Classification report SVC:')\n",
+    "print(model_score)\n",
+    "\n",
+    "\n",
+    "#DO FEATURE SELECTION\n",
+    "#DO HYPERPARAMETER TUNING\n",
+    "#DO CLASS MERGE (IF NEEDED)"
    ]
   },
   {
