--- a/date-a-scientist_v2.ipynb
+++ b/date-a-scientist_v2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 49,
    "id": "ff5719c4-3769-4b36-b061-15204251ad1f",
    "metadata": {
     "scrolled": true
@@ -51,18 +51,35 @@
       "dtypes: float64(1), int64(2), object(28)\n",
       "memory usage: 14.2+ MB\n",
       "None\n",
-      "count    59887.000000\n",
-      "mean        39.496402\n",
-      "std         77.210241\n",
-      "min          0.000000\n",
-      "25%          1.000000\n",
-      "50%          3.000000\n",
-      "75%         32.000000\n",
-      "max        370.000000\n",
-      "Name: last_online, dtype: float64\n",
-      "last_online\n",
-      "active        0.509042\n",
-      "not active    0.490958\n",
+      "pets\n",
+      "unknown                            0.332292\n",
+      "likes dogs and likes cats          0.247132\n",
+      "likes dogs                         0.120577\n",
+      "likes dogs and has cats            0.071952\n",
+      "has dogs                           0.068980\n",
+      "has dogs and likes cats            0.038873\n",
+      "likes dogs and dislikes cats       0.033880\n",
+      "has dogs and has cats              0.024596\n",
+      "has cats                           0.023444\n",
+      "likes cats                         0.017733\n",
+      "has dogs and dislikes cats         0.009184\n",
+      "dislikes dogs and likes cats       0.003974\n",
+      "dislikes dogs and dislikes cats    0.003256\n",
+      "dislikes cats                      0.002037\n",
+      "dislikes dogs and has cats         0.001353\n",
+      "dislikes dogs                      0.000735\n",
+      "Name: proportion, dtype: float64\n",
+      "likes_dogs\n",
+      "yes    0.624493\n",
+      "no     0.375507\n",
+      "Name: proportion, dtype: float64\n",
+      "likes_dogs\n",
+      "yes    0.624493\n",
+      "no     0.375507\n",
+      "Name: proportion, dtype: float64\n",
+      "likes_cats\n",
+      "no     0.522584\n",
+      "yes    0.477416\n",
       "Name: proportion, dtype: float64\n"
      ]
     }
@@ -269,8 +286,6 @@
     "most_recent_date = df['last_online'].max()\n",
     "df['last_online'] = (most_recent_date - df['last_online']).dt.days\n",
     "\n",
-    "print(df['last_online'].describe())\n",
-    "\n",
     "#binary distribution into active or not active. Could also make a semi active category (<=1, <=3, >3)\n",
     "def categorize_last_online(v):\n",
     "    if v <= 3:\n",
@@ -280,15 +295,75 @@
     "\n",
     "df['last_online'] = df['last_online'].apply(categorize_last_online)\n",
     "\n",
-    "print(df['last_online'].value_counts(normalize = True))"
+    "#location\n",
+    "\n",
+    "def get_city(location):\n",
+    "    city = location.split(',')[0]\n",
+    "    if city == 'san francisco': #50% of the states are san francisco, so will do this and 'other'\n",
+    "        return city\n",
+    "    else:\n",
+    "        return 'other'\n",
+    "\n",
+    "df['city'] = df['location'].apply(get_city)\n",
+    "\n",
+    "#offspring\n",
+    "df['offspring'] = df['offspring'].fillna('unknown')\n",
+    "\n",
+    "#will drop the column because there are 60% of unknowns and spliting between has and wants kids made it worse.\n",
+    "\n",
+    "df.drop('offspring', axis = 1)\n",
+    "\n",
+    "#orientation\n",
+    "\n",
+    "map_orientation = {\n",
+    "    'straight': 'straight',\n",
+    "    'gay': 'queer',\n",
+    "    'bisexual': 'queer'\n",
+    "}\n",
+    "\n",
+    "df['orientation'] = df['orientation'].map(map_orientation).fillna('unknown')\n",
+    "\n",
+    "#pets\n",
+    "df['pets'] = df['pets'].fillna('unknown')\n",
+    "print(df['pets'].value_counts(normalize=True))\n",
+    "\n",
+    "def likes_dogs(pets):\n",
+    "    if pd.isna(pets):\n",
+    "        return 'unknown'\n",
+    "    pets = pets.lower()\n",
+    "    if 'likes dogs' in pets or 'has dogs' in pets:\n",
+    "        return 'yes'\n",
+    "    else:\n",
+    "        return 'no'\n",
+    "\n",
+    "df['likes_dogs'] = df['pets'].apply(likes_dogs)\n",
+    "\n",
+    "print(df['likes_dogs'].value_counts(normalize=True))\n",
+    "    \n",
+    "def likes_cats(pets):\n",
+    "    if pd.isna(pets):\n",
+    "        return 'unknown'\n",
+    "    pets = pets.lower()\n",
+    "    if 'likes cats' in pets or 'has cats' in pets:\n",
+    "        return 'yes'\n",
+    "    else:\n",
+    "        return 'no'\n",
+    "\n",
+    "df['likes_dogs'] = df['pets'].apply(likes_dogs)\n",
+    "df['likes_cats'] = df['pets'].apply(likes_cats)\n",
+    "\n",
+    "print(df['likes_dogs'].value_counts(normalize=True))\n",
+    "print(df['likes_cats'].value_counts(normalize=True))\n",
+    "\n",
+    "#RETHINK THIS -> "
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -300,7 +375,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
